###### TWE 5.1-1 RELEASED ######
2014-08-21 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - natively supporting ext. attribs for Standard and History related assignment manager
      - checkbox to specify if WebClient and Engine configuration should be defined      
   # XMLGroupPanel: new constructor to be able to specify if empty space should be added to the end of the group or not

2014-08-20 Sasa Bojanic <sasaboy@together.at>
   # Fix: "Create outlook variables" action was not disabled when element is read-only
   # Fix: "Edit expression in associated application" action was not disabled when element is read-only
   # Shark mode: 
       - support for 7 new Shark kernel extended attributes
       - improved GUI

2014-08-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
       - support for Hide/Read-only dynamic properties, Hide controls and Turn-off features ext. attributes
       - improved GUI

2014-08-07 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: added create outlook variables action in Workflow Variables table GUI

2014-08-05 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: category variable is now represented as Package/Workflow process attribute

2014-07-30 Sasa Bojanic <sasaboy@together.at>
   # Fix: orthogonal-no-routing transitions were not orthogonal after setting port property allowPortMagic to false. Now it is fixed for all but Start/End events
   # Fix: SetTransitionStyle action didn't work for associations

2014-06-27 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to position artifact/gateway/start/end labels to the top/bottom/left/right location. Information stored in XPDL.

2014-06-23 Sasa Bojanic <sasaboy@together.at>
   # Fix: transition condition label was not always fully shown 
   # Fix: scrollbars were missing when Zoom In action was performed and then activity was moved
   # Fix: rendering of (otherwise) transitions going from/to and/or split/join node
   