@@ -202,6 +202,8 @@ REASSIGN_WITH_UNACCEPTANCE_TO_SINGLE_USERKey=Reassign with unacceptance to singl
 DELETE_OTHER_ASSIGNMENTSKey=Delete other assignments
 ASSIGNMENT_MANAGER_PLUGINKey=Assignment manager plug-in
 OVERRIDE_PROCESS_CONTEXTKey=Override process context
+OverrideProcessVariableKey=Override process variable
+OverrideExpressionKey=Override expression
 
 StandardAssignmentManagerConfigurationKey=Standard assignment manager configuration
 ASSIGNMENT_MANAGER_APPEND_RESPONSIBLESKey=Append responsibles to assignee list
