@@ -195,6 +195,8 @@
 #Missing translation -> DELETE_OTHER_ASSIGNMENTSKey=Delete other assignments
 #Missing translation -> ASSIGNMENT_MANAGER_PLUGINKey=Assignment manager plug-in
 #Missing translation -> OVERRIDE_PROCESS_CONTEXTKey=Override process context
+#Missing translation -> OverrideProcessVariableKey=Override process variable
+#Missing translation -> OverrideExpressionKey=Override expression
 
 #Missing translation -> StandardAssignmentManagerConfigurationKey=Standard assignment manager configuration
 #Missing translation -> ASSIGNMENT_MANAGER_APPEND_RESPONSIBLESKey=Append responsibles to assignee list
