@@ -195,6 +195,8 @@ REASSIGN_WITH_UNACCEPTANCE_TO_SINGLE_USERKey=Preraspodeli jednom korisniku sa ne
 DELETE_OTHER_ASSIGNMENTSKey=Obri\u0161i ostale dodele zadatka
 ASSIGNMENT_MANAGER_PLUGINKey=Assignment manager plug-in
 OVERRIDE_PROCESS_CONTEXTKey=Upi\u0161i preko konteksta procesa
+OverrideProcessVariableKey=Redefini\u0161i varijablu procesa
+OverrideExpressionKey=Izraz za redefinisanje
 
 StandardAssignmentManagerConfigurationKey=Standard assignment manager pode\u0161avanja
 ASSIGNMENT_MANAGER_APPEND_RESPONSIBLESKey=Dodaj odgovorne u listu izvr\u0161ilaca
